prevent long tag from overflowing

--- a/src/styles/components/Tag.module.css
+++ b/src/styles/components/Tag.module.css
@@ -6,6 +6,9 @@
 
 .tag a {
 	text-decoration: none;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
 }
 
 .tag a:hover {
